cmake_minimum_required(VERSION 3.10)

project(SortingAlgo)

add_executable(SortingAlgo
               main.cpp
               CountingSort.hpp
               RadixSort.hpp
               ShellSort.hpp
               HeapSort.hpp
               Utility.hpp
               Test.hpp
               SelectionSort.hpp)


